Fix mobile article layout break

--- a/source/stylesheets/components/_menu.sass
+++ b/source/stylesheets/components/_menu.sass
@@ -42,8 +42,8 @@
   visibility: hidden
   top: 0
   left: 0
-  width: 100vw
-  height: 100vh
+  width: 100%
+  height: 100%
   background-color: rgba(0,0,0,0.1)
   opacity: 0
   transition: 0.3s opacity
@@ -64,6 +64,7 @@ nav
   background: $c-bg
   border-left: 2px solid #DFDFDF
   transition: 0.3s right, 0.3s opacity
+  z-index: 2
   
   &.is-open
     right: 0px
