--- a/source/stylesheets/typography/_tp_in_content.sass
+++ b/source/stylesheets/typography/_tp_in_content.sass
@@ -161,7 +161,7 @@
     color: #777
 
   iframe
-    max-width: 640px
+    max-width: 100%
     margin: 0 auto
     display: block
     margin-bottom: 40px
